add_mcld_library(MCLDLD
  Archive.cpp
  ArchiveReader.cpp
  BinaryReader.cpp
  BranchIsland.cpp
  BranchIslandFactory.cpp
  BSDArchiveReader.cpp
  DebugString.cpp
  Diagnostic.cpp
  DiagnosticEngine.cpp
  DiagnosticInfos.cpp
  DiagnosticLineInfo.cpp
  DiagnosticPrinter.cpp
  DWARFLineInfo.cpp
  DynObjReader.cpp
  EhFrame.cpp
  EhFrameHdr.cpp
  EhFrameReader.cpp
  ELFBinaryReader.cpp
  ELFDynObjFileFormat.cpp
  ELFDynObjReader.cpp
  ELFExecFileFormat.cpp
  ELFFileFormat.cpp
  ELFObjectReader.cpp
  ELFObjectWriter.cpp
  ELFReader.cpp
  ELFReaderIf.cpp
  ELFSegment.cpp
  ELFSegmentFactory.cpp
  GarbageCollection.cpp
  GNUArchiveReader.cpp
  GroupReader.cpp
  IdenticalCodeFolding.cpp
  LDContext.cpp
  LDFileFormat.cpp
  LDReader.cpp
  LDSection.cpp
  LDSymbol.cpp
  MergedStringTable.cpp
  MsgHandler.cpp
  NamePool.cpp
  ObjectWriter.cpp
  RelocationFactory.cpp
  Relocator.cpp
  RelocData.cpp
  ResolveInfo.cpp
  Resolver.cpp
  SectionData.cpp
  SectionSymbolSet.cpp
  StaticResolver.cpp
  StubFactory.cpp
  TextDiagnosticPrinter.cpp
  )

target_link_libraries(MCLDLD ${cmake_2_8_12_PRIVATE}
  MCLDFragment
  MCLDSupport
  )
